--- a/Assets/NaughtyAttributes/package.json
+++ b/Assets/NaughtyAttributes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.dbrizov.naughtyattributes",
+  "name": "com.dbrizov.naughtyattributes-x",
   "displayName": "NaughtyAttributes-Next",
   "version": "2.2.0",
   "unity": "2022.3",
